# lightmatter

./: .gitattributes  .gitignore  CITATION.cff  DATA_SOURCES.md  LICENSE  Makefile  README.md  download_planck_map.py  pyproject.toml  run_analysis_with_planck.py  setup.py  verify_map.py
.github/workflows/: ci.yml
configs/: default.yaml  mcmc.yaml  physical.yaml
data/: README.md  SHA256SUMS  h0licow_kappa_ext.csv  kappa_ext.csv  tdcosmo_time_delays.csv
data/quick/: clocks_quick.csv  kappa_ext_quick.csv  pulsars_quick.csv  tdcosmo_quick.csv
docs/: ARCHITECTURE.md  FIGURE_REPRODUCTION.md  RELEASE.md  ROADMAP.md  physical_calibration.md
ivi_thickness/: __init__.py  bayes.py  data.py  diagnostics.py  fit.py  maps.py  model.py  plots.py
ivi_thickness.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mcmc_results/: config_used.json  mcmc_chain.npz
output/: ivi_results.pkl
results/20251025_185345/: ivi_results.pkl
results/planck_857_analysis/: ivi_publish_results.json  ivi_results.pkl  lensing_fit_points.csv  pulsar_fit_points.csv
results/publish_20251026_123702/: README.md  clock_fit_points.csv  ivi_publish_results.json  ivi_results.pkl  lensing_fit_points.csv  methods_appendix.md  pulsar_fit_points.csv
results/quick_run/: clock_fit_points.csv  ivi_publish_results.json  ivi_results.pkl  (+2 more)
scripts/: check_data_integrity.py  generate_ppc_plots.py  make_publication_bundle.py  plot_publication_figures.py  run_analysis.py  run_mcmc.py
tests/: __init__.py  test_synthetic_recovery.py
time_thickness_data/: h0licow_lenses.json  nanograv_pulsars.json
